# chippy

./: .gitignore  Box.cpp  Box.h  CMakeCache.txt  CMakeLists.txt  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  Makefile  Node.cpp  Node.h  Text.cpp  Text.h  TextManager.cpp  TextManager.h  Vec.h  Window.cpp  Window.h  chippy  cmake_install.cmake  constants.h  main.c  main.cpp
