cmake_minimum_required(VERSION 3.9.1)
project(skippy)
include_directories(/usr/local/include)
include_directories(/opt/homebrew/opt/freetype2/include/freetype2)
link_directories(/usr/local/lib)
link_directories(/opt/homebrew/opt/freetype2/lib/)
add_executable(chippy main.c)
target_link_libraries(chippy sdl2)
target_link_libraries(chippy freetype)